# clang_reflect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: UseClangReflect.cmake
src/: ClangReflect.cpp  ClangReflect.hpp  ClangUtil.hpp  CliUtil.hpp  MacroUtil.hpp  StringUtil.hpp  SysUtil.hpp  clang_reflect.cpp  clang_reflect.hpp  clang_util.hpp  cli_util.hpp  file_util.hpp  reflect.hpp
test/: CMakeLists.txt  ClangReflectTests.cpp  CppHeaders.hpp  Foobar.hpp  FoobarClear.cpp  FoobarCopy.cpp  FoobarEquals.cpp  FoobarLogging.cpp  FoobarToString.cpp  Foobase.hpp  Foobaz.hpp  clang_reflect_tests.cpp  foobar.hpp  foobar_clear.cpp  foobase.hpp
test/reflectors/: ClassLogger.hpp  Clearer.hpp  Copier.hpp  EqualityChecker.hpp  FromString.hpp  ToString.hpp
